--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "react-native-restart": "0.0.7",
     "react-native-share": "^1.1.3",
     "react-native-vector-icons": "^6.4.2",
+    "react-redux": "^6.0.0",
     "realm": "^2.22.0",
+    "redux": "^4.0.1",
     "sympto": "^1.0.4"
   },
   "devDependencies": {
