--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-redux": "^6.0.0",
     "realm": "^2.22.0",
     "redux": "^4.0.1",
+    "redux-starter-kit": "^0.5.1",
     "sympto": "^1.0.4"
   },
   "devDependencies": {
